// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`text-node-compiler on compile simple text node 1`] = `
"(() => {
  let textNode = document.createTextNode(\`node data\`);
  parent.appendChild(textNode);
})();"
`;

exports[`text-node-compiler on compile text node with expression 1`] = `
"(() => {
  let textNode = document.createTextNode(\`Helloo \${ status.fullname }!\`);
  parent.appendChild(textNode);
  REACTIVE_COMPILER_PART;
})();"
`;
